2005-05-06  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* THANKS: add Hans Forbrich.

	* Documentation/topdocs/NEWS.tely (Top): document new feature.

	* Documentation/user/basic-notation.itely (Staff symbol): document
	start/stop staff. Reference to ossia.ly

	* input/test/ossia.ly: new example using stop and startStaff.

	* lily/timing-engraver.cc: remove Timing_engraver::initialize(),
	in other words, don't create "|" barline at start of the score.
	(start_translation_timestep): don't set whichBar for start of score.

	* input/regression/staff-halfway.ly: use new functionality.

	* lily/staff-symbol-engraver.cc (try_music): take StaffSpanEvents,
	start and stop staff based on events.

	* scm/define-music-types.scm (music-descriptions): add StaffSpanEvent

	* ly/declarations-init.ly (startStaff, stopStaff): new identifiers.

2005-05-05  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/user/programming-interface.itely (How markups work
	internally ): remove \encoding reference.

2005-05-04  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* scripts/convert-ly.py: Attempt to do a smarter update of 
	text markups from versions < 1.9.0 with arbitrary nesting.

2005-05-04  Heikki Junes  <hjunes@cc.hut.fi>

	* po/fi.po: convert to utf-8, and update.

2005-05-04  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* make/lilypond.suse.spec.in: update from suse 2.4 package.

	* lily/*.cc: more <? >? to min/max changes

	* lily/include/interpretation-context-handle.hh: rename
	Interpretation_context_handle to Context_handle.

2005-05-04  Heikki Junes  <hjunes@cc.hut.fi>

	* input/regression/GNUmakefile (local_delete): use `find` together 
	with `xargs` to avoid too long argument-lists in cmd line.

2005-05-04  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/introduction.itely: updates "About this manual".

	* Documentation/user/advanced-notation.itely,
	invoking.itely: minor fixes.

2005-05-04  Han-Wen Nienhuys  <hanwen@xs4all.nl>
