@@ -1,3 +1,9 @@
+2005-05-06  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* mf/GNUmakefile (MFTRACE_FLAGS):
+	* buildscripts/substitute-encoding.py (outdir): Build fix: pass
+	outdir as option (WAS: hardcoded).
+
 2005-05-06  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* THANKS: add Hans Forbrich.
